src/objects/Invoice1__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <formula>CASE( Opportunity__r.QuoteBillingFrequency__c , &quot;Monthly&quot;, &quot;Monthly&quot;, &quot;Quarterly&quot;, &quot;Quarterly&quot;,&quot;Yearly&quot;,&quot;Yearly&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <formula>CASE( Opportunity__r.QuotePaymentMode__c , &quot;Credit Card&quot;, &quot;Credit Card&quot;, &quot;Wire Transfer&quot;, &quot;Wire Transfer&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Termsquote__c</fullName>
        <formula>CASE(Opportunity__r.QuotePaymentTime__c , &quot;Net 30&quot;, &quot;Net 30&quot;, &quot;Net 45&quot;, &quot;Net 45&quot;,&quot;Net 60&quot;,&quot;Net 60&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Terms</label>
        <type>Text</type>
    </fields>
    <label>Invoice</label>
    <nameField>
        <displayFormat>Inv-{0000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Opp_Won</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL(Opportunity__r.StageName,&quot;Prospecting&quot;)) || 
(ISPICKVAL(Opportunity__r.StageName,&quot;Qualification&quot;)) || 
(ISPICKVAL(Opportunity__r.StageName,&quot;Needs Analysis&quot;)) || 
(ISPICKVAL(Opportunity__r.StageName,&quot;Value Proposition&quot;)) || 
(ISPICKVAL(Opportunity__r.StageName,&quot;Id. Decision Makers&quot;)) || 
(ISPICKVAL(Opportunity__r.StageName,&quot;Perception Analysis&quot;)) || 
(ISPICKVAL(Opportunity__r.StageName,&quot;Proposal/Price Quote&quot;)) || 
(ISPICKVAL(Opportunity__r.StageName,&quot;Negotiation/Review&quot;)) || 
(ISPICKVAL(Opportunity__r.StageName,&quot;Closed Lost&quot;))</errorConditionFormula>
        <errorMessage>To create an invoice the opportunity has to be in stage: &quot;Closed Won&quot;</errorMessage>
    </validationRules>
</CustomObject>